cambio de texto tarjeta asado

--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                            consequatur quos error fuga excepturi quo. Laudantium optio
-                            pariatur laboriosam modi, ea molestias?
+                            Te presentamos la papa Patagonia, un tesoro directo desde el sur de Chile, que llega desde el campo a su mesa. No es cualquier papa, ¡es la papa Patagonia!
+
+                            Cultivada en los suelos ricos y puros de campos a orillas del Lago Budi, esta papa se destaca por su sabor único y textura inigualable. Su piel fina y carne suave la hacen perfecta para todo tipo de preparaciones: desde un puré cremoso que te abrace el alma, hasta unas papas fritas.
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
