cambio de texto tarjeta Alaska

--- a/index.html
+++ b/index.html
@@ -122,7 +122,11 @@
                     <div class="card-body">
                         <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
                         <p class="card-text">
-                            Recorre la Patagonia y prueba los mejores asados del sur chileno.
+                            Recorre la Patagonia y prueba los mejores asados del sur chileno.Un ritual típico de la cultura patagónica es hacer el cordero al palo. La preparación de este exquisito plato característico de la Patagonia chilena es todo un ritual, ya que su cocción es al aire libre y se debe hacer por lo menos un par de horas.
+
+                            Mientras se prepara, como es tradición, puedes disfrutar de un rico vino “chambreado” y contemplar el hermoso paisaje que te acompaña.
+                            
+                            Otra forma de cocinar este sabroso plato es en horno de leña, pero de igual manera debes esperar el mismo tiempo a que esté listo, ya que el secreto de esta receta es su lenta cocción y el ritual que se crea en torno a las largas horas de preparación. ¡Seguro que cuando lo pruebes pensarás que valió la pena la espera!
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
