cambio de texto tarjeta papas del fin del mundo

--- a/index.html
+++ b/index.html
@@ -154,12 +154,12 @@
                 <div class="card">
                     <div class="image-top" style="background-image: url(assets/img/card-3.jpg)"></div>
                     <div class="card-body">
-                        <h5 class="card-title fw-bold">Salmones de Alaska</h5>
+                        <h5 class="card-title fw-bold">Salmones de la Patagonia</h5>
                         <p class="card-text">
-                            Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                            Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                            corporis facilis qui architecto dolor, accusamus eveniet
-                            exercitationem fugit. Quod autem neque ducimus.
+                            En la Patagonia Norte cerca de Hornopirén, la temporada de pesca del salmón es de febrero a abril.
+                            En esta época, las temperaturas por la mañana pueden estar entre 10º y 15ºC, y las máximas entre 13:00 y las 16:00hrs pueden llegar fácilmente a los 20ºC.
+                            Especies de salmón
+                            En Chile se cultivan tres principales especies de salmónidos: el salmón Atlántico, el salmón del Pacífico o salmón coho, y la trucha arcoíris. 
                         </p>
                         <button type="button" class="btn btn-outline-info">
                             Ver más
